Fixed a bug displaying long contents out of box

--- a/wwwroot/css/Review.css
+++ b/wwwroot/css/Review.css
@@ -50,7 +50,6 @@
 
 .browser {
     min-height: 30vmax;
-    max-height: 46vmax;
 }
 
 #quill-container {
